chore(blog-meta-img): update blog meta image for autogenerated thumbnails

--- a/content/blog/adding-comments-to-your-gatsbyjs-blog/adding-comments-to-your-gatsbyjs-blog.mdx
+++ b/content/blog/adding-comments-to-your-gatsbyjs-blog/adding-comments-to-your-gatsbyjs-blog.mdx
@@ -1,9 +1,9 @@
 ---
-title: Adding comments to your GatsbyJS Blog within 10 minutes
+title: Adding Comments To Your GatsbyJS Blog In Less Than 10 Minutes
 date: 2021-06-28 00:00:00
 author: Muhammad Ahsan Ayaz
 description:
-  Learn how to add comments to your GatsbyJS Blog within 10 minutes using
+  Learn how to add comments to your GatsbyJS Blog in less than 10 minutes using
   utterances. We'll create a new gatsbyjs blog and will add the capability to
   add comments to it.
 
@@ -15,8 +15,8 @@ tags:
 
 <header>
   In this quick article, you'll kearn how to add comments to your GatsbyJS Blog
-  within 10 minutes using <a href="https://utteranc.es/">Utterances</a>. Which
-  is a free 🚀, no-ads 🚫, and open-sourced 🙌 solution for implementing
+  in less than 10 minutes using <a href="https://utteranc.es/">Utterances</a>.
+  Which is a free 🚀, no-ads 🚫, and open-sourced 🙌 solution for implementing
   comments using the{" "}
   <a href="https://developer.github.com/v3/search/#search-issues">
     GitHub Issues Search API
