chore(gatsby-article): add video link to gatsbyjs article

--- a/content/blog/adding-comments-to-your-gatsbyjs-blog/adding-comments-to-your-gatsbyjs-blog.mdx
+++ b/content/blog/adding-comments-to-your-gatsbyjs-blog/adding-comments-to-your-gatsbyjs-blog.mdx
@@ -32,6 +32,11 @@ tags:
   backgroundColor="transparent"
 />
 
+<div style="margin-top: 30px;">
+  <PromotionBanner title="Would rather see a video tutorial? I got you covered 👌<br/>Watch it below 👇"></PromotionBanner>
+  <EmbeddedYouTubeVideo src="https://www.youtube.com/embed/YK0vZb9vupk" />
+</div>
+
 ## Why
 
 If you've a blog or website where you share your thoughts, tutorials, or
