chore(social): fix gde link from gatsbyconfig

--- a/content/blog/adding-comments-to-your-gatsbyjs-blog/adding-comments-to-your-gatsbyjs-blog.mdx
+++ b/content/blog/adding-comments-to-your-gatsbyjs-blog/adding-comments-to-your-gatsbyjs-blog.mdx
@@ -1,5 +1,5 @@
 ---
-title: Adding Comments To Your GatsbyJS Blog In Less Than 10 Minutes
+title: How to Add Comments To Your GatsbyJS Blog In Less Than 10 Minutes
 date: 2021-06-28 00:00:00
 author: Muhammad Ahsan Ayaz
 description:
