chore(angular-cookbook): update thumbnail

--- a/content/blog/announcing-angular-cookbook/announcing-angular-cookbook.mdx
+++ b/content/blog/announcing-angular-cookbook/announcing-angular-cookbook.mdx
@@ -109,7 +109,7 @@ YEAH, of course. How'll I get rich otherwise?
 
 Just kidding 😄. I have spent a lot of time learning lots of techniques with
 Angular. For the most part, it's easy peasy. But some things you always learn
-**the hard way**. And I'd never want anyone to unnecessary spent extensive time
-to go learning those techniques. The purpose of this book is to make the process
-easier for you to become an **Expert** in developing Enterprise applications
-with Angular.
+**the hard way**. And I'd never want anyone to unnecessarily spent extensive
+time to go learning those techniques. The purpose of this book is to make the
+process easier for you to become an **Expert** in developing Enterprise
+applications with Angular.
