add Angular cookbook youtube annoucement

--- a/content/blog/announcing-angular-cookbook/announcing-angular-cookbook.mdx
+++ b/content/blog/announcing-angular-cookbook/announcing-angular-cookbook.mdx
@@ -19,7 +19,6 @@ tags:
   - life
 ---
 
-<AngularCookbook />
 <header>
   <div>*Taking a deep breath in relief.... Sigh!</div>
   <div>
@@ -50,6 +49,8 @@ tags:
 </div>
 
 ## Cookbook What?
+
+<EmbeddedYouTubeVideo src="https://www.youtube.com/embed/Dwoqa61LCDo" />
 
 If you are an 🅰️ngular developer and are always thinking what are the best
 practices for this, and that in Angular, this is a book that I've written **JUST
